# ircio

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ircio/: __init__.py  __init__.pyi  client.py  client.pyi  connection.py  connection.pyi  dispatcher.py  dispatcher.pyi  exceptions.py  exceptions.pyi  message.py  message.pyi  sasl.py  sasl.pyi
tests/: conftest.py  test_client.py  test_connection.py  test_dispatcher.py  test_message.py  test_sasl.py
