[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ircio"
version = "1.1.0"
description = "Async IRC library for Python 3.14+"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
ecdsa = ["cryptography>=42.0"]

[dependency-groups]
dev = [
    "cryptography>=42.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/ircio"]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are fine where needed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",  # no annotation requirement in tests
]
